<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_account_title">
        <menu>
            <item
                android:id="@+id/manageUsersFragment"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_manage_users_title" />
            <item
                android:id="@+id/myAccountFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_my_account_title" />
        </menu>
    </item>

    <item android:title="@string/menu_app_title">
        <menu>
            <item
                android:id="@+id/menu_language"
                android:icon="@drawable/ic_language"
                android:title="@string/menu_language_title"
                app:actionViewClass="android.widget.ToggleButton"/>
            <item
                android:id="@+id/menu_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/menu_dark_mode_title"
                app:actionViewClass="androidx.appcompat.widget.SwitchCompat"/>
        </menu>
    </item>
    <item android:title="@string/menu_support_title">
        <menu>
            <item
                android:id="@+id/contactUsFragment"
                android:icon="@drawable/ic_phone"
                android:title="@string/menu_contact_us_title" />
            <item
                android:id="@+id/feedbackFragment"
                android:icon="@drawable/ic_messages"
                android:title="@string/menu_feedback_title" />
            <item
                android:id="@+id/helpFragment"
                android:icon="@drawable/ic_faq"
                android:title="@string/menu_faq_title" />
        </menu>
    </item>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_logout_title" />
</menu>