<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.home.presentation.HomeFragment"
        android:label="@string/menu_home_title"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/requestsFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.requests.presentation.RequestsFragment"
        android:label="@string/menu_requests_title"
        tools:layout="@layout/fragment_requests" />
    <fragment
        android:id="@+id/messagesFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.messages.presentation.MessagesFragment"
        android:label="@string/menu_messages_title"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/manageUsersFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.account.presentation.ManageUsersFragment"
        android:label="@string/menu_manage_users_title"
        tools:layout="@layout/fragment_manage_users" />
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.account.presentation.MyAccountFragment"
        android:label="@string/menu_my_account_title"
        tools:layout="@layout/fragment_my_account" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.support.presentation.ContactUsFragment"
        android:label="@string/menu_contact_us_title"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.support.presentation.FeedbackFragment"
        android:label="@string/menu_feedback_title"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="gmail.ahmedmeabbas.rovingcareprototype.support.presentation.FAQFragment"
        android:label="@string/menu_faq_title"
        tools:layout="@layout/fragment_faq" />
</navigation>