<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignUpHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/firstNameTIL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/lastNameTIL"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/guidelineEditTextTop"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumberTIL"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTIL"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/emailSignUpTIL"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTIL"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailSignUpTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordSignUpTIL"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTIL"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordSignUpTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/confirmPasswordSignUpTIL"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/emailSignUpTIL"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/hint_color"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordSignUpTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:scrollbarThumbHorizontal="@color/hint_color"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@+id/passwordSignUpTIL"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/hint_color"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="?attr/colorOnSecondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/btnSignUp"
                layout="@layout/custom_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@id/guidelineSignUpButton"
                app:layout_constraintEnd_toStartOf="@+id/guideline4v"
                app:layout_constraintStart_toStartOf="@+id/guideline3v"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordSignUpTIL" />

            <TextView
                android:id="@+id/tvToS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/ToS"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2v"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1v"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEditTextTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>